--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-gesture-handler": "^1.0.12",
-    "react-navigation": "3.0.0-rc.5"
+    "react-navigation": "3.0.0-rc.5",
+    "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
