--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "3.0.0-rc.5",
     "react-timer-mixin": "^0.13.4"
